# learnRobotic

./: 1_1-ROS2_command_line_tools.md  1_2-ROS2_client_libraries.md  1_3-Intermediate.md  1_ROS2_basics.md  README.md  ros2_env_conf.sh
related/task5/__MACOSX/: ._task5
related/task5/task5/node_debug_task/: package.xml  setup.cfg  setup.py
related/task5/task5/node_debug_task/config/: params_a.yaml  params_b.yaml  params_d.yaml
related/task5/task5/node_debug_task/launch/: node_debug_task.launch.py
related/task5/task5/node_debug_task/node_debug_task/: NodeA.py  NodeB.py  NodeC.py  NodeD.py
ros2_ws/launch/: turtlesim_mimic_launch.xml
ros2_ws/src/cpp_launch_tutorial/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_launch_tutorial/launch/: example_main_launch.py  example_main_launch.xml  example_substitutions_launch.py
ros2_ws/src/cpp_parameter_event_handler/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_parameter_event_handler/src/: parameter_event_handler.cpp
ros2_ws/src/cpp_parameters/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_parameters/launch/: cpp_parameters_launch.py
ros2_ws/src/cpp_parameters/src/: cpp_parameters_node.cpp
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_pubsub/src/: publisher_lambda_function_interf.cpp  subscriber_lambda_function_interf.cpp
ros2_ws/src/cpp_srvcli/: CMakeLists.txt  package.xml
ros2_ws/src/custom_action_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/custom_action_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/learning_tf2_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/learning_tf2_cpp/launch/: start_tf2_debug_demo_launch.yaml  static_transform_publisher_launch.py  turtle_tf2_demo_launch.py  turtle_tf2_demo_launch.xml  turtle_tf2_demo_launch.yaml  turtle_tf2_dynamic_frame_demo_launch.xml  turtle_tf2_dynamic_frame_demo_launch.yaml  turtle_tf2_fixed_frame_demo_launch.py  turtle_tf2_fixed_frame_demo_launch.xml  turtle_tf2_fixed_frame_demo_launch.yaml
ros2_ws/src/learning_tf2_cpp/src/: turtle_tf2_listener.cpp  turtle_tf2_listener_debug.cpp
ros2_ws/src/learning_tf2_py/: package.xml  setup.py
ros2_ws/src/learning_tf2_py/launch/: static_transform_publisher_launch.xml  static_transform_publisher_launch.yaml  turtle_tf2_demo_launch.py  turtle_tf2_demo_launch.yaml  turtle_tf2_dynamic_frame_demo_launch.xml  turtle_tf2_dynamic_frame_demo_launch.yaml  turtle_tf2_fixed_frame_demo_launch.yaml  turtle_tf2_sensor_message_launch.xml
ros2_ws/src/more_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/my_package/: package.xml
ros2_ws/src/my_package_py/: package.xml  setup.py
ros2_ws/src/polygon_base/: CMakeLists.txt  package.xml
ros2_ws/src/polygon_plugins/: CMakeLists.txt  package.xml
ros2_ws/src/polygon_plugins/src/: polygon_plugins.cpp
ros2_ws/src/py_launch_example/: package.xml  setup.py
ros2_ws/src/py_launch_tutorial/: package.xml  setup.py
ros2_ws/src/py_launch_tutorial/launch/: example_main_launch.py  example_main_launch.xml  launch_turtlesim_PushROSNamespace_launch.py  launch_turtlesim_PushROSNamespace_launch.xml  launch_turtlesim_PushROSNamespace_launch.yaml  launch_turtlesim_launch.py  launch_turtlesim_launch.xml  launch_turtlesim_launch.yaml  turtlesim_world_2_launch.py  turtlesim_world_2_launch.xml  turtlesim_world_2_launch.yaml  turtlesim_world_3_launch.xml  turtlesim_world_3_launch.yaml
ros2_ws/src/py_pubsub/: package.xml  setup.py
ros2_ws/src/py_pubsub/py_pubsub/: publisher_member_function_interf.py  subscriber_member_function_interf.py
ros2_ws/src/py_server_client/: fibonacci_action_client.py  fibonacci_action_server.py
ros2_ws/src/py_srvcli/: package.xml  setup.py
ros2_ws/src/python_parameter_event_handler/: package.xml  setup.py
ros2_ws/src/python_parameter_event_handler/python_parameter_event_handler/: parameter_event_handler.py
ros2_ws/src/python_parameters/: package.xml  setup.py
ros2_ws/src/python_parameters/python_parameters/: python_parameters_node.py
ros2_ws/src/ros2_fund_t0_pub_sub/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_fund_t0_pub_sub/src/: publisher.cpp  publisher_cust_msg.cpp  subscriber.cpp  subscriber_cust_msg.cpp
ros2_ws/src/ros2_fund_t1_pub1_sub1/: package.xml  setup.cfg  setup.py
ros2_ws/src/ros2_fund_t1_pub1_sub1/ros2_fund_t1_pub1_sub1/: publisher1.py  publisher1_cust_msg.py  subscriber1.py  subscriber1_cust_msg.py
ros2_ws/src/ros2_fund_t2_custom_msg/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_fund_t2_custom_msg/msg/: Hello.msg
ros2_ws/src/ros2_fund_t3_multi_instances/: package.xml  setup.cfg  setup.py
ros2_ws/src/ros2_fund_t3_multi_instances/launch/: t3_multi_instance_launch.xml
ros2_ws/src/ros2_fund_t3_multi_instances/ros2_fund_t3_multi_instances/: publisher3_cust_msg.py  subscriber3_cust_msg.py
ros2_ws/src/ros2_fund_t4_cli_ser/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_fund_t4_cli_ser/src/: cli1_sum_three.cpp  cli2_sum_three_block.cpp  serv1_sum_three.cpp  serv2_sum_three.cpp
ros2_ws/src/ros2_fund_t5_node_debug/: package.xml  setup.cfg  setup.py
ros2_ws/src/ros2_fund_t5_node_debug/config/: params_a.yaml  params_b.yaml  params_d.yaml  params_s.yaml
ros2_ws/src/ros2_fund_t5_node_debug/launch/: ros2_fund_t5_node_debug.launch.py
ros2_ws/src/ros2_fund_t5_node_debug/ros2_fund_t5_node_debug/: NodeA.py  NodeC.py  NodeD.py  NodeS.py
ros2_ws/src/ros2_fund_t6_rviz_basics/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_fund_t6_rviz_basics/src/: pub_curve_with_marker.cpp
ros2_ws/src/ros2_fund_t7_action/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_fund_t7_action/action/: NavigateToPose.action
ros2_ws/src/ros2_fund_t7_action/src/: navigate_to_cli.cpp  navigate_to_serv.cpp
ros2_ws/src/ros2_fund_t8_executors/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_fund_t8_executors/src/: cli_executor_multi.cpp  cli_executor_single.cpp  serv_sum_three.cpp
ros2_ws/src/ros2_fund_t8_executors/srv/: RosTask4.srv
ros2_ws/src/tutorial_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/urdf_tutorial_cpp/: package.xml
ros2_ws/src/urdf_tutorial_r2d2/: package.xml  setup.py
(+3 files in other folders)
