<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_fund_t3_multi_instances</name>
  <version>1.0.0</version>
  <description>ROS2 Fundamentals - Task 3: Multi Instances. Python</description>
  <maintainer email="benjamin.canton@htecgroup.com">benjamincanton</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- Custom message type Hello.msg -->
  <exec_depend>ros2_fund_t2_custom_msg</exec_depend>
  <!-- Package include launch files -->
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
